// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render title 1`] = `
<header
  className="cf-page__header"
>
  <h1
    className="cf-page__title"
  >
    Title
  </h1>
</header>
`;

exports[`should render title/subtitle 1`] = `
<header
  className="cf-page__header"
>
  <h1
    className="cf-page__title"
  >
    Title
  </h1>
  <p
    className="cf-page__subtitle"
  >
    Subtitle
  </p>
</header>
`;
